# packed_tensor

./: AGENTS.md  README.md  pyproject.toml  vis_mask.py
examples/: varlen_vit.py
src/packed_tensor/: packed_tensor.py  packed_tensor_functions.py
src/packed_tensor/conv/: __init__.py  common.py  conv.py
src/packed_tensor/conv/backend/: im2col.py  loop.py
src/packed_tensor/neighbor_attn/: __init__.py  neighbor_attn.py
src/packed_tensor/neighbor_attn/backend/: flex_attn.py  natten.py
src/varlen_natten/: packed_tensor.py
test/: test_conv.py  test_natten_flex.py  test_natten_loop.py  test_neighbor_attn.py  test_packed_tensor.py  test_packed_tensor_functions.py  test_torch_compile.py
