[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[project]
name = "varlen_natten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "natten>=0.21.6",
    "numpy>=2.2.6",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
  "matplotlib>=3.10.9",
  "pytest >=8.1.1,<9",
  "ruff",
  "imgcat"
]

[tool.uv.build-backend]
module-name = "packed_tensor"
